Fix some issues detected by sonar (#873)
* Improve visibility and isolation in pmtiles

* Format code with spotless

* throw dedicated exceptions

* Remove unused methods

* Remove duplicate code

* Add default to switch statements

* Fix boxed boolean checks

* Suppress warnings

* implement equals and hashCode in adapters

* Use unary operator instead of function

* Use parametrized types

* Add private constructors

* Improve use of instanceof

* Cleanup test

* Merge cases in switch statements

* Merge if statements

* Use records instead of classes

* Use final when appropriate

* Improve use of Optional

* Format test assertions